--- a/bin/sass/vars/_var.scss
+++ b/bin/sass/vars/_var.scss
@@ -28,6 +28,7 @@ $large-size: 1.5em;
 //borders
 $border-grey: 1px solid grey;
 //colors
+$textOnWhite: #363636;
 $white: #fff;
 $black: #000;
 $smoke: #5f5f5f;
