--- a/bin/sass/component/_shopping.scss
+++ b/bin/sass/component/_shopping.scss
@@ -1,4 +1,8 @@
-
+/** shopping component view styles
+@TODO provide build reference tagging for packageing compile styles into
+each component to maintain full component architecture
+**/
+.sidepanel,
 .shopping{
   padding: 1em;
   .frame{
