--- a/bin/sass/main.scss
+++ b/bin/sass/main.scss
@@ -6,5 +6,6 @@
 @import 'common/grid';
 @import 'common/animate';
 
+@import 'component/sidepanel';
 @import 'component/shopping';
 @import 'component/displaybox';
