--- a/bin/sass/common/_main.scss
+++ b/bin/sass/common/_main.scss
@@ -24,13 +24,14 @@ ul{
   padding-bottom: 100%;
   z-index: 1;
   img{
-    position: absolute;
+    cursor: pointer;
     height: auto;
+    position: absolute;
     width: 100%;
   }
 }
 .flags{
-  font-size: 0.65em;
+  font-size: 6pt;
   font-style: normal;
   display: inline-block;
   margin-bottom: 0.5em;
