--- a/bin/sass/vars/_var.scss
+++ b/bin/sass/vars/_var.scss
@@ -37,7 +37,7 @@ $grey: #8f8f8f;
 $light-grey: #939393;
 $green: #27AE60;
 $golden: #998100;
-$dark: dark-grey;
+$dark: #696969;
 $red: #8b0000;
 $blue: #2980B9;
 $orange: #cc8400;
