Updates for sidepanel startup start state and clearing history

--- a/bin/sass/common/_main.scss
+++ b/bin/sass/common/_main.scss
@@ -13,6 +13,11 @@ ul{
     }
   }
 }
+input{
+  background-color:transparent;
+  border: none;
+  outline: none; 
+}
 .image-wrap{
   animation-name: fader;
   animation-duration: 2s;
