Finishing new tooling add new interfaces for the react.interface.d

--- a/bin/sass/component/_shopping.scss
+++ b/bin/sass/component/_shopping.scss
@@ -61,3 +61,18 @@ each component to maintain full component architecture
     }
   }
 }
+@media(min-width: 1366px){
+  .shopping{
+    .frame{
+      .panel{
+        font-size: 1.2em;
+        .flags{
+          font-size: 8pt;
+        }
+        .price{
+          font-size: 0.8em;
+        }
+      }
+    }
+  }
+}
