Stubbing out unit tests

--- a/bin/sass/component/_displaybox.scss
+++ b/bin/sass/component/_displaybox.scss
@@ -45,7 +45,7 @@ each component to maintain full component architecture
   .presentation-box{
     // height: 75%;
     margin: 0 8%;
-    overflow: hidden;
+    overflow: visible;
     position: relative;
     top: 12.5%;
     width: 75%;
